10/03/15-08:49:21: Working on issue #38: only updating balance graph on timer event. Renamed balance_value event to balance_updated
10/03/15-09:36:46: Working on issue #38: Added initial support for portfolio started message. Using linger=0 by default on ZMQ sockets.
10/03/15-09:48:21: Working on issue #38: added support for configuration of the portfolio manager endpoint.
10/03/15-23:20:18: Working on issue #38: Cleaning graph when receiving portfolio started event.
10/09/15-16:03:57: Working on issue #45: sending message when updated trader weight.
10/09/15-21:28:44: Fixed bug in currency trader utility computation.
10/09/15-23:06:40: Working on issue #45: Added unit test for reading of trader weight update.
10/09/15-23:42:55: Working on issue #45: Added support to display the trader weight evolution on the MT5 Control App.
10/10/15-00:24:37: Working on issue #46: implemented simple long run for portforlio test.
10/10/15-11:32:22: Working on issue #46: gracefully handling some error in symbol tick requests.
10/10/15-11:45:00: Working on issue #46: added support for display of the trader utility values.
10/10/15-16:42:36: Working on issue #47: Added portfolio test with integrated position handling decisions.
10/11/15-09:13:38: Working on issue #48: using the proper time values on the x axis for the MT5 Control app plots.
10/11/15-18:01:42: Working on issue #50: updated TradingAgent to provide its own capabilities.
10/12/15-09:23:25: Working on issue #50: added initial base class for indicator.
10/12/15-14:48:43: Working on issue #5: added test for prepend to array util function.
10/12/15-17:27:07: Working on issue #50: fixed issue in computation of ichimoku span A value.
10/12/15-18:59:57: Working on issue #50: done testing the ichimoku indicator implementation.
10/12/15-21:23:50: Working on issue #50: Prepared ichimoku agent implementation.
10/12/15-23:43:50: Working on issue #50: It seems we are now always calling the update of the agents as expected.