@@ -308,3 +308,4 @@ But we need the fix for issue #29 first.
 10/12/15-18:59:57: Working on issue #50: done testing the ichimoku indicator implementation.
 10/12/15-21:23:50: Working on issue #50: Prepared ichimoku agent implementation.
 10/12/15-23:43:50: Working on issue #50: It seems we are now always calling the update of the agents as expected.
+10/13/15-00:09:49: Working on issue #50: partially fixed the MT5 Control app plot  axis range.
